--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,19 @@
 <header class="header">
   <div class="container header__container">
-      <a href="/" class="logo"><span class="logo__dot"></span> Velaro-Trend</a>
+      <a href="./#hero" class="logo"><span class="logo__dot"></span> Velaro-Trend</a>
 
       <nav class="nav">
           <ul class="nav__list">
-              <li><a href="#hero" class="nav__link">Главная</a></li>
-              <li><a href="#trends" class="nav__link">Тренды</a></li>
-              <li><a href="#analytics" class="nav__link">Аналитика</a></li>
-              <li><a href="#cases" class="nav__link">Кейсы</a></li>
-              <li><a href="#education" class="nav__link">Блог</a></li>
+              <li><a href="./#hero" class="nav__link">Главная</a></li>
+              <li><a href="./#trends" class="nav__link">Тренды</a></li>
+              <li><a href="./#analytics" class="nav__link">Аналитика</a></li>
+              <li><a href="./#cases" class="nav__link">Кейсы</a></li>
+              <li><a href="./#education" class="nav__link">Блог</a></li>
           </ul>
       </nav>
 
       <div class="header__actions">
-          <a href="#contact" class="btn btn--header">Начать сейчас</a>
+          <a href="./#contact" class="btn btn--header">Начать сейчас</a>
           <button class="burger" id="burger-btn">
               <span></span><span></span>
           </button>
@@ -23,11 +23,11 @@
 
 <div class="mobile-menu" id="mobile-menu">
   <ul class="mobile-menu__list">
-      <li><a href="#hero">Главная</a></li>
-      <li><a href="#trends">Тренды</a></li>
-      <li><a href="#analytics">Аналитика</a></li>
-      <li><a href="#cases">Кейсы</a></li>
-      <li><a href="#education">Блог</a></li>
-      <li><a href="#contact" class="accent">Бесплатная консультация</a></li>
+      <li><a href="./#hero">Главная</a></li>
+      <li><a href="./#trends">Тренды</a></li>
+      <li><a href="./#analytics">Аналитика</a></li>
+      <li><a href="./#cases">Кейсы</a></li>
+      <li><a href="./#education">Блог</a></li>
+      <li><a href="./#contact" class="accent">Бесплатная консультация</a></li>
   </ul>
 </div>
